--- a/frontend-event-service/src/app/login/login.component.html
+++ b/frontend-event-service/src/app/login/login.component.html
@@ -26,12 +26,13 @@
             Invalid credentials!!! Please try again
           </div>
 
-          <div class="text-center text-lg-start mt-4 pt-2">
+          <div class="text-center text-lg-start mt-4 pt-2" >
             <button (click)=handleLogin() type="button" class="btn btn-primary btn-lg"
                     style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
-                                                                              class="link-danger">Sign up</a></p>
+            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a (click)=handleSignIn()
+                                                                              class="link-danger pointer-cursor">Sign up</a></p>
           </div>
+
 
 
 
