--- a/frontend-event-service/src/app/header/header.component.html
+++ b/frontend-event-service/src/app/header/header.component.html
@@ -5,14 +5,14 @@
 
     <h3 style="color:blue">BCBS FullStack Assessment</h3>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-      <li><a href="#" class="nav-link px-2 link-dark">Events</a></li>
+    <ul class="nav nav-pills col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a routerLink="/" class="nav-link px-2" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" >Home</a></li>
+      <li><a routerLink="/events" *ngIf="this.hardCodedAuthenticationService.isUserLoggedIn()"  class="nav-link px-2 " [routerLinkActive]="['active']"  >Events</a></li>
     </ul>
 
     <div class="col-md-3 text-end">
-      <button type="button" class="btn btn-outline-primary me-2">Login</button>
-      <button type="button" class="btn btn-primary">Sign-up</button>
+      <button type="button" *ngIf="!this.hardCodedAuthenticationService.isUserLoggedIn()" routerLink="/login"  class="btn btn-outline-primary me-2">Login / Sign-up</button>
+      <button type="button" *ngIf="this.hardCodedAuthenticationService.isUserLoggedIn()" routerLink="/logout"  class="btn btn-outline-primary me-2">Logout</button>
     </div>
   </header>
 </div>
