--- a/frontend-event-service/src/app/app.component.html
+++ b/frontend-event-service/src/app/app.component.html
@@ -1,11 +1,12 @@
 <app-header></app-header>
+<body>
+  <div class="container p-5 my-5">
 
-<div class="container">
 
+    <router-outlet></router-outlet>
 
-  <router-outlet></router-outlet>
-
-</div>
+  </div>
+</body>
 
 <app-footer></app-footer>
 
