--- a/frontend-event-service/src/app/login/login.component.html
+++ b/frontend-event-service/src/app/login/login.component.html
@@ -8,14 +8,13 @@
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form>
 
-          <!-- Email input -->
           <div class="form-outline mb-4">
-            <input type="email" id="email" name="email" class="form-control form-control-lg"
-                   placeholder="Email" [(ngModel)]="email" />
-            <label class="form-label" for="email">Email</label>
+            <input type="email" id="username" name="username" class="form-control form-control-lg"
+                   placeholder="UserName" [(ngModel)]="username" />
+            <label class="form-label" for="username">Username</label>
           </div>
 
-          <!-- Password input -->
+
           <div class="form-outline mb-3">
             <input type="password" name="password" id="password" class="form-control form-control-lg"
                    placeholder="Password" [(ngModel)]="password"/>
@@ -27,14 +26,11 @@
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2" >
-            <button (click)=handleLogin() type="button" class="btn btn-primary btn-lg"
+            <button (click)=handleLogin() type="submit" class="btn btn-primary btn-lg"
                     style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
             <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a (click)=handleSignIn()
                                                                               class="link-danger pointer-cursor">Sign up</a></p>
           </div>
-
-
-
 
         </form>
       </div>
