--- a/frontend-event-service/src/app/register/register.component.html
+++ b/frontend-event-service/src/app/register/register.component.html
@@ -11,9 +11,17 @@
                 <form class="mx-1 mx-md-4">
 
                   <div class="d-flex flex-row align-items-center mb-4">
+                    <i class="fas  fa-lg me-3 fa-fw fa-id-card"></i>
+                    <div class="form-outline flex-fill mb-0">
+                      <input type="text" id="username" name="username"  [(ngModel)]="username" class="form-control" />
+                      <label class="form-label" for="name">username</label>
+                    </div>
+                  </div>
+
+                  <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="text" id="name" class="form-control" />
+                      <input type="text" id="name" name="name" [(ngModel)]="name" class="form-control" />
                       <label class="form-label" for="name">Your Name</label>
                     </div>
                   </div>
@@ -21,7 +29,7 @@
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="email" id="email" class="form-control" />
+                      <input type="email" id="email"  name="email" [(ngModel)]="email" class="form-control" />
                       <label class="form-label" for="email">Your Email</label>
                     </div>
                   </div>
@@ -29,21 +37,17 @@
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      <input type="password" id="password" class="form-control" />
-                      <label class="form-label" for="password">Password</label>
+                      <input type="password" id="password" name="password" [(ngModel)]="password" class="form-control" />
+                      <label class="form-label" for="password" >Password</label>
                     </div>
                   </div>
 
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      <input type="password" id="repeatPassword" class="form-control" />
-                      <label class="form-label" for="repeatPassword">Repeat your password</label>
-                    </div>
+                  <div class="alert alert-danger" role="alert" *ngIf="!ableToRegister">
+                    Unable to register, please try with a different username
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg">Register</button>
+                    <button type="button" class="btn btn-primary btn-lg" (click)=registerUser()>Register</button>
                   </div>
 
                 </form>
