--- a/frontend-event-service/src/app/events/event/event.component.html
+++ b/frontend-event-service/src/app/events/event/event.component.html
@@ -6,7 +6,7 @@
     <div class="col-sm-8">
       <h3>{{event?.title}}</h3>
       <div class="row ">
-        <div class="col fs-5">{{event?.time | date:'yyyy/MM/dd HH:mm'}} </div>
+        <div class="col fs-5">{{event?.time | date:'MM/dd/yyyy hh:mm a'}} </div>
         <div class="col text-end fs-5">{{event?.duration}} </div>
       </div>
       <div class="row g-5 my-1">
