--- a/frontend-event-service/src/app/events/events.component.html
+++ b/frontend-event-service/src/app/events/events.component.html
@@ -9,7 +9,7 @@
         <p class="fs-3">{{event.title}}</p>
       </div>
       <div class="row">
-        <p class="fs-5">{{event.time}}</p>
+        <p class="fs-5">{{event.time | date:'MM/dd/yyyy hh:mm a'}}</p>
       </div>
       <div class="row">
         <p class="fs-5">{{event.duration}}</p>
